# wanted-pre-onboarding-backend

./: README.md  pyproject.toml
applies/: admin.py  apps.py  models.py  serializers.py
applies/migrations/: 0001_initial.py
companies/: admin.py  models.py  serializers.py
companies/migrations/: 0001_initial.py
config/: settings.py  urls.py
recruits/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
recruits/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py
